--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -17,8 +17,9 @@
     }
   }
 
-  @media screen and (max-width: 320px) {
+  @media screen and (max-width: 425px) {
     .header {
       max-height: 42px;
+      margin: 0 16px 48px;
     }
   }
