--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -5,6 +5,7 @@
   max-width: 1280px;
   margin: 0 auto;
   padding: 0;
+  margin: 28px auto 24px;
 }
 
 @media screen and (max-width: 1024px) {
@@ -12,4 +13,16 @@
     max-width: 1024px;
     
   }  
+}
+
+@media screen and (max-width: 768px) {
+ .page {
+  margin: 28px 24px;
+ }
+}
+
+@media screen and (max-width: 425px) {
+  .page {
+    margin: 16px 0 0;
+  }
 }
