--- a/styles/index.css
+++ b/styles/index.css
@@ -3,408 +3,46 @@
 @import url(../blocks/link/link.css);
 /*PAGE*/
 @import url(../blocks/page/page.css);
+/*CONTENT*/
+@import url(../blocks/content/content.css);
 /*HEADER*/
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
 @import url(../blocks/header/__lang-links/header__lang-links.css);
 @import url(../blocks/header/__lang-link/header__lang-link.css);
-
-
-
-.page {
-  margin: 28px auto 24px;
-  max-width: 1280px;
-}
-
-.content {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  gap: 92px;
-}
-
 /*LEAD*/
-.lead {
-  margin: 0 auto 0;
-  max-width: 984px;
-  max-height: 1005px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.lead__title {
-  margin: 0;
-  max-width: 720px;
-  height: 200px;
-  font-size: 96px;
-  font-weight: 900;
-  line-height: 100px;
-}
-
-.lead__subtitle {
-  width: 640px;
-  font-size: 30px;
-  line-height: 36px;
-  margin: 32px 0 0;
-  padding: 0;
-}
-
-.lead__figure {
-  margin: 0;
-  max-width: 984px;
-  height: 100%;
-}
-
-.lead__image {
-  margin-top: 64px;
-  width: 984px;
-}
-
-.lead__caption {
-  font-size: 10px;
-  line-height: 10px;
-  letter-spacing: 1.5px;
-  text-transform: uppercase;
-  margin-top: 8px;
-  text-align: start;
-}
-
+@import url(../blocks/lead/lead.css);
+@import url(../blocks/lead/__title/lead__title.css);
+@import url(../blocks/lead/__subtitle/lead__subtitle.css);
+@import url(../blocks/lead/__figure/lead__fugure.css);
+@import url(../blocks/lead/__image/lead__image.css);
+@import url(../blocks/lead/__caption/lead__caption.css);
 /*INTRO*/
-.intro {
-  max-width: 690px;
-  margin-left: 148px;
-  align-self: first baseline;
-}
-
-.intro__title {
-    margin: 0 0 40px;
-  font-size: 54px;
-  font-weight: 900;
-  line-height: 58px;
-}
-
-.intro__text {
-  margin: 0;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-.intro__list {
- list-style: none;
- margin: 0;
- padding: 0;
- margin-top: 33px;
- font-size: 12px;
- font-weight: 700;
- line-height: 18px;
-}
-
-.intro__list_numbers {
-  font-weight: 400;
-}
-
-
-
-/*PLACES*/
-.places {
-  max-width: 984px;
-  display: grid;
-  gap: 80px;
-  
-}
-
-.place {
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-rows: repeat(2, min-content);
-  grid-template-columns: min-content 1fr;
-  gap: 48px 40px;
-}
-
-.place__title {
-  margin: 0;
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 76px;
-}
-
-.place__image {
-  max-width: 460px;
-}
-
-.place__website {
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-end;
-  gap: 12px;
-}
-
-
-.place__url-heading {
-  margin: 0;
-  color: #AAA;
-  font-size: 12px;
-  font-weight: 400;
-  line-height: 12px;
-  letter-spacing: 2px;
-}
-
-.place__link {
-  margin: 0;
-  color: #fff;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 22px;
-}
-
-.place__paragraphs {
-  display: flex;
-  flex-direction: column;
-  gap: 26px;
-}
-
-.place__paragraph {
-  margin: 0;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 29.3px;
-}
-
-
-
+@import url(../blocks/intro/intro.css);
+@import url(../blocks/intro/__title/intro__title.css);
+@import url(../blocks/intro/__text/intro__text.css);
+@import url(../blocks/intro/__list/intro__list.css);
+@import url(../blocks/intro/__list/intro__list_numbers.css);
 /*PHOTO-GRID*/
-
-.photo-grid {
-  max-width: 1184px;
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-  gap: 16px;
-}
-
-.photo-grid__item {
-  width: 100%;
-}
-
-
+@import url(../blocks/photo-grid/photo-grid.css);
+@import url(../blocks/photo-grid/__item/photo-grid__item.css);
+/*PLACES*/
+@import url(../blocks/places/plsces.css);
+@import url(../blocks/places/place/place.css);
+@import url(../blocks/places/place/__title/place__title.css);
+@import url(../blocks/places/place/__image/place__image.css);
+@import url(../blocks/places/place/__website/place__website.css);
+@import url(../blocks/places/place/__url-heading/place__url-heading.css);
+@import url(../blocks/places/place/__link/place__link.css);
+@import url(../blocks/places/place/paragraphs/__paragraphs.css);
+@import url(../blocks/places/place/paragraph/place__paragraph.css);
 /*COVER*/
-.cover {
-  width: 1184px;
-  height: 740px;
-  margin: 0 48px 0;
-
-}
-
-.cover__overlay {
- position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
-  background-image: url(../images/cover-trains.jpg);
-  background-size: 100% 100%;
-  text-decoration: none;
-  text-align: center;
-  color: inherit;
-  z-index: 1;
-}
-
-.cover__overlay::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  background-color: #2A2C2F;
-  opacity: .3;
-  transition: opacity .3s ease-in-out;
-  z-index: -1;
-}
-
-.cover__overlay:hover::after {
-  opacity: .8;
-}
-
-.cover__title {
-  width: calc(100% - 312px*2);
-  font-size: 72px;
-  font-weight: 900;
-  line-height: 76px;
-  margin: 0;
-  
-}
-
-.cover__subtitle {
-  margin: 32px 0 0;
-  max-width: 360px;
-  font-size: 18px;
-  line-height: 22px;
-  text-align: center;
-}
-
-
-
+@import url(../blocks/cover/cover.css);
+@import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__title/cover__title.css);
+@import url(../blocks/cover/__subtitle/cover__subtitle.css);
 /*FOOTER*/
-.footer {
-  max-width: 1184px;
-  height: 18px;
-  display: flex;
-  justify-content: space-between;
-  gap: 18px;
-  margin: 92px 48px 24px;
-}
-
-.footer__link {
-  display: flex;
-  text-decoration: none;
-}
-
-.nav {
-  display: flex;
-  flex-direction: row;
-  gap: 18px;
-}
-
-.footer__copyright {
-  margin: 0;
-  height: 16px;
-  font-size: 14px;
-  line-height: 1;
-  align-self: flex-end;
-}
-
-.footer__copyright::before {
-  content: "\00A9";
-}
-
-@media screen and (max-width: 1024px) {
-  .lead {
-    max-height: 962px;
-    /*margin-top: 48px;*/
-  }
-  .lead__image {
-    width: 928px;
-    margin-top: 56px;
-  }
-  .lead__title {
-    font-size: 96px;
-  }
-   .intro {
-    margin-left: 48px;
-   }
-   .photo-grid {
-   max-width: 928px;
-    grid-template-columns: repeat(auto-fit, minmax(300, 1fr));
-    gap: 14px;
-  }
-  .places {
-    width: calc(100% - 48px*2);
-  }
-  .place{
-    gap: 48px 32px;
-   }
-  
-  .place__image {
-    max-width: 440px;
-  }
-  .cover {
-    max-width: 100vw;
-    height: 640px;
-    margin: 0;
-  }
-  .cover__title {
-    width: calc(100vw - 232px*2);
-  }
-  .footer {
-    max-width: 928px;
-  }
-}
-
-
-@media screen and (max-width: 768px) {
- .page {
-  margin: 28px 24px;
- }
- .content {
-  gap: 88px;
- }
-
-  .lead {
-    margin: 0;
-    width: 100vw;
-  }
-  .lead__image {
-    width: 100%;
-  }
-  .lead__caption {
-    margin-left: 24px;
-  }
-  .intro {
-    margin: 0;
-    max-width: 720px;
-  }
-  .photo-grid {
-    max-width: 720px;
-    margin: 0;
-    gap: 16px;
-  }
-  .places {
-    max-width: 720px;
-    margin: 0;
-    gap: 73px;
-  }
-  
-  .place__title {
-    font-size: 42px;
-    line-height: 46px;
-  }
-  .place__paragraphs {
-    gap: 25px;
-  }
-
-  .place__paragraph {
-    font-size: 16px;
-    line-height: 26px;
-  }
-
-  .place {
-    gap: 48px 28px;
-  }
-  .place__image {
-    width: 340px;
-  }
-  .cover {
-   margin: 88px 0;
-   max-height: 480px;
-}
-
-  .cover__title {
-     margin: 115px 104px 32px;
-  }
-
-  .footer {
-    max-width: 720px;
-    margin: 0 24px 24px;
-  }
-}
-
-@media screen and (max-width: 330px) {
-  .page {
-    margin: 16px 16px 24px;
-  }
-  .lead {
-    margin-top: 48px;
-  }
-  
-  .lead__title {
-    width: calc(100vw - 16px*2);
-    font-size: 40px;
-    line-height: 44px;
-  }
-}
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__link/footer__link.css);
+@import url(../blocks/footer/__copyraght/footer__copyright.css);
+@import url(../blocks/nav/nav.css);
