--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -1,7 +1,7 @@
 .page {
   background-color: #2A2C2F;
   color: #fff;
-  font-family: 'Inter';
+  font-family: 'Inter', sans-serif;
   max-width: 1280px;
   padding: 0;
   margin: 28px auto 24px;
