--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,11 +1,12 @@
 .lead__image {
   margin-top: 64px;
-  width: 984px;
+  /*width: 984px;*/
+  width: 100%;
 }
 
 @media screen and (max-width: 1024px) {
   .lead__image {
-    width: 928px;
+   /* max-width: 928px;*/
     margin-top: 56px;
   }
 }
@@ -19,6 +20,5 @@
 @media screen and (max-width: 692px) {
   .lead__image {
     margin-top: 40px;
-    width: 100vw;
   }
 }
