--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,12 +1,12 @@
 .cover {
-  width: 1184px;
+  width: calc(100% - 48px*2);
   height: 740px;
   margin: 0 48px 0;
 }
 
 @media screen and (max-width: 1024px) {
     .cover {
-      max-width: 100vw;
+      width: 100%;
       max-height: 640px;
       margin: 0;
     }
