--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -1,5 +1,5 @@
 .lead {
-  margin: 0 auto 0;
+  margin: 0 148px 0;
   max-width: 984px;
   display: flex;
   flex-direction: column;
@@ -8,15 +8,9 @@
   text-align: center;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .lead {
+    max-width: 928px;
     margin: 0;
-    width: 100vw;
-  }
-}
-
-@media screen and (max-width: 425px) {
-  .lead {
-    margin: 0 16px;
   }
 }
