--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -1,5 +1,5 @@
 .photo-grid {
-  max-width: 1184px;
+  width: calc(100% - 48px*2);
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
   gap: 16px;
@@ -7,15 +7,13 @@
 
 @media screen and (max-width: 1024px) {
   .photo-grid {
-    max-width: 928px;
-    grid-template-columns: repeat(auto-fit, minmax(300, 1fr));
-   gap: 14px;
+    gap: 14px;
   }
 }
 
 @media screen and (max-width: 768px) {
   .photo-grid {
-    max-width: 720px;
+    width: calc(100% - 24px*2);
     margin: 0;
     gap: 16px;
   }
