--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -15,7 +15,7 @@
 @media screen and (max-width: 768px) {
   .footer {
     max-width: 720px;
-    margin: 88px 24зч 0;
+    margin: 88px 24px 0;
   }
 }
 
