--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,13 +6,13 @@
   margin: 0;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1240px) {
   .cover__title {
     width: calc(100vw - 232px*2);
   }
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 963px) {
   .cover__title {
     width: calc(100% - 104px*2);
   }
@@ -21,6 +21,13 @@
 @media screen and (max-width: 692px) {
   .cover__title {
     width: calc(100% - 16px*2);
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .cover__title {
+    font-size: 50px;
+    line-height: 55px;
   }
 }
 
