--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,27 +1,26 @@
 .cover {
   width: calc(100% - 48px*2);
-  height: 740px;
+  min-height: 740px;
   margin: 0 48px 0;
 }
 
 @media screen and (max-width: 1024px) {
     .cover {
       width: 100%;
-      max-height: 640px;
+      min-height: 640px;
       margin: 0;
     }
 }
 
 @media screen and (max-width: 768px) {
     .cover {
-     margin: 0;
-     max-height: 480px;
+      min-height: 480px;
   }
 }
 
 @media screen and (max-width: 425px) {
   .cover {
     margin-top: 2px;
-    height: 200px;
+    min-height: 200px;
   }
 }
