--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,6 +1,8 @@
 .footer__link {
   display: flex;
   text-decoration: none;
+  font-size: 16px;
+  line-height: 18px;
 }
 
 @media screen and (max-width: 425px) {
