--- a/blocks/header/__logo/header__logo.css
+++ b/blocks/header/__logo/header__logo.css
@@ -1,4 +1,8 @@
-@media screen and (max-width: 320px) {
+.header__logo {
+  width: 176px;
+}
+
+@media screen and (max-width: 350px) {
   .header__logo {
     max-width: 142px;
   }
