--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -21,6 +21,7 @@
 
 @media screen and (max-width: 425px) {
   .page {
-    margin: 16px 0 0;
+    margin: 0;
   }
 }
+/* * { outline: 1px solid yellow; }*/
